# Source/IdentityApi/Controllers/UserController.cs
@@ -5,30 +5,56 @@ using IdentityApi.User.Commands.CreateUserProfile;
 using IdentityApi.User.Dtos;
 using IdentityApi.User.Queries;
 using LS.Common;
+using LS.Startup;
 using MediatR;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 
 namespace IdentityApi.Controllers;
 
 
 [Route("api/User")]
-public class UserController(IMediator mediator) : Controller
+public class UserController(IMediator mediator, ICurrentUserService currentUserService) : Controller
 {
     [Route("/Profile")]
     [HttpPost]
-    public Task<UserProfileDto> CreateUserProfile([FromBody] CreateUserProfileCommand command) => mediator.Send(command);
+    [Authorize]
+    public Task<UserProfileDto> CreateUserProfile([FromForm] CreateUserProfileCommand command)
+    {
+        command.UserId = currentUserService.UserId;
+        return mediator.Send(command);
+    }
 
     [Route("/Profile")]
     [HttpPut]
-    public Task<UserProfileDto> EditUserProfile([FromBody] EditUserProfileCommand command) => mediator.Send(command);
+    [Authorize]
+    public Task<UserProfileDto> EditUserProfile([FromForm] EditUserProfileCommand command) 
+    {
+        command.UserId = currentUserService.UserId;
+        return mediator.Send(command);
+    }
     
-    [Route("/{id}/Profile")]
+    [Route("/Profile")]
     [HttpGet]
-    public Task<UserProfileDto> UserProfileDetails([FromRoute]string id)
+    [Authorize]
+    public Task<UserProfileDto> UserProfileDetails()
+    {
+        var userId = currentUserService.UserId;
+        return mediator.Send(new GetSingleUserProfileQuery()
+        {
+            UserId = userId
+        });
+    }
+    
+    [Route("{userId}/Profile")]
+    [HttpGet]
+    public Task<UserProfileDto> UserProfileDetailsById([FromRoute]string userId)
     {
         return mediator.Send(new GetSingleUserProfileQuery()
         {
-            UserId = id
+            UserId = userId
         });
     }
+    
+    
 }
