# Source/IdentityApi/User/Commands/EditUserProfile/EditUserProfileCommand.cs
@@ -5,42 +5,48 @@ using LS.Common;
 using LS.Common.Enums.Identity;
 using LS.Startup;
 using MediatR;
+using PromptApi.Services;
 
 namespace IdentityApi.User.Commands.CreateUserProfile;
 
 public class EditUserProfileCommand : IRequest<UserProfileDto>
 {
-    public Guid UserId { get; init; }
+    public string UserId { get; set; }
     public IFormFile? ProfileImage { get; init; }
     public string Name { get; init; }
     public string Surname { get; init; }
+    public Sex? Sex { get; init; }
     public int? Weight { get; init; }
     public int? Height { get; init; }
     public int? Age { get; init; }
     public Education? EducationLevel { get; init; }
 }
 
-public class EditUserProfileCommandHandler : IRequestHandler<EditUserProfileCommand, UserProfileDto>
+public class EditUserProfileCommandHandler(IGenericRepository<UserProfile> userProfileRepository, IMapper mapper, IBlobStorageService blobStorageService)
+    : IRequestHandler<EditUserProfileCommand, UserProfileDto>
 {
-    private readonly IGenericRepository<UserProfile> _userProfileRepository;
-    private readonly IMapper _mapper;
-
-    public EditUserProfileCommandHandler(IGenericRepository<UserProfile> userProfileRepository, IMapper mapper)
-    {
-        _userProfileRepository = userProfileRepository;
-        _mapper = mapper;
-    }
-
     public async Task<UserProfileDto> Handle(EditUserProfileCommand request, CancellationToken cancellationToken)
     {
-        var userProfile = _mapper.Map<UserProfile>(request);
-        // if (request.ProfileImage is not null)
-        // {
-        //     userProfile.ProfileImage = await request.ProfileImage.GetBytes();
-        // }
-        _userProfileRepository.Update(userProfile);
-        await _userProfileRepository.SaveAsync();
-        
-        return _mapper.Map<UserProfileDto>(userProfile);
+        var userProfile = mapper.Map<UserProfile>(request);
+        if (request.ProfileImage is not null)
+        {
+            using var ms = new MemoryStream();
+            await request.ProfileImage.CopyToAsync(ms, cancellationToken);
+            ms.Seek(0, SeekOrigin.Begin);
+            var addedProfileImageId = await blobStorageService.UploadProfileImage(ms, "image/jpeg", cancellationToken);
+            if (addedProfileImageId != Guid.Empty)
+            {
+                userProfile.ProfileImageId = addedProfileImageId;
+            }
+        }
+        userProfileRepository.Update(userProfile);
+        await userProfileRepository.SaveAsync();
+        var userProfileDto = mapper.Map<UserProfileDto>(userProfile);
+        if (userProfile.ProfileImageId is not null)
+        {
+            userProfileDto.ProfileImageData = await blobStorageService.GetProfileImage(userProfile.ProfileImageId.Value, cancellationToken);
+        }
+
+        return userProfileDto;
     }
 }
